--- a/MVC_Kutuphane_Otomasyonu/Views/KitapTurleri/Ekle.cshtml
+++ b/MVC_Kutuphane_Otomasyonu/Views/KitapTurleri/Ekle.cshtml
@@ -9,7 +9,7 @@
 
         <div class="ibox">
             <div class="ibox-head">
-                Kitap Türü Ekle
+                Kitap Türü Ekleme Sayfası
             </div>
             <div class="ibox-body">
                 @using (Html.BeginForm("Ekle", "KitapTurleri", FormMethod.Post))
