--- a/MVC_Kutuphane_Otomasyonu/Views/Duyurular/Index.cshtml
+++ b/MVC_Kutuphane_Otomasyonu/Views/Duyurular/Index.cshtml
@@ -1,51 +1,282 @@
-﻿@model IEnumerable<MVC_Kutuphane_Otomasyonu_Entities.Model.Duyurular>
+﻿@model MVC_Kutuphane_Otomasyonu_Entities.Model.Duyurular
 
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Baslik)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Duyuru)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Aciklama)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tarih)
-        </th>
-        <th></th>
-    </tr>
+@Html.Partial("_PartialDuyuru")
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Baslik)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Duyuru)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Aciklama)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Tarih)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+<script src="~/AdminDashboard/admincast-master/html/dist/assets/vendors/moment/min/moment.min.js"></script>
+<script src="~/AdminDashboard/admincast-master/html/dist/assets/vendors/jquery/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
-</table>
+<script>
+  function Listele () {
+        $.ajax({
+            type: 'get',
+            url: '@Url.Action("DuyuruList")',
+
+            dataType: 'json',
+            success: function (data) {
+               $('#tbl tbody').html(''); // Mevcut tablo içeriğini temizle
+                var tbody = $('#tbl tbody');
+               $.each(data, function (index, item) {
+
+                    var milisecond = parseInt(item.Tarih.substr(6));
+                    var formattedDate = moment(milisecond).format('DD.MM.YYYY HH:mm:ss ');
+                   var row = '<tr><td><input type="checkbox" class="recordCheckBox" data-id="' + item.ID + '" /></td>' +
+
+                        '<td>' + item.ID + '</td>' +
+                        '<td>' + item.Baslik + '</td>' +
+                        '<td>' + item.Duyuru + '</td>' +
+                        '<td>' + item.Aciklama + '</td>' +
+                        '<td>' + formattedDate + '</td>' +
+                        '<td>' +
+                        '<a href= # class=" btnDuzenle btn btn-warning btn-sm" data-id="'+item.ID+'"><i class="fa fa-edit"></i></a> | ' +
+                        @*'<a href="@Url.Action("Detay", "Duyurular")/' + item.ID + '" class="btn btn-info btn-sm">Detay</a> | ' +*@
+                        '<a href=# data-id="' + item.ID + '" class="btnSil btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>  '  +
+                        '</td>' +
+                        '</tr>';
+                    $('#tbl tbody').append(row);
+                });
+            },
+            error: function ( error) {
+                console.log( error);
+            }
+        });
+    }
+</script>
+
+<script>
+    $(document).ready(function () {
+        Listele();
+    });
+</script>
+
+<script>
+    $(document).ready(function () {
+
+        $('#data-form').submit(function (e) {
+            e.preventDefault(); // Formun varsayılan gönderimini engelle
+            var formData = $(this).serialize();
+
+            $.ajax({
+                method: 'post',
+                url:'@Url.Action("DuyuruEkle")',
+                data: formData,
+                success: function (result) {
+                    if (result.success) {
+
+
+                        Listele(); // Tabloyu güncelle
+                        $('#dataModal').modal('hide'); // Modalı kapat
+                        alert(result.message);
+                        Temizle();
+                    }
+                    else {
+                        $.each(result.errors, function (key, value) {
+                            $('[data-valmsg-for="' + key + '"]').text('');
+                            $('[data-valmsg-for="' + key + '"]').text(value[0]);
+                        });
+                    }
+                }
+            });
+        });
+    });
+</script>
+
+<script>
+    $(document).on('click', '.btnDuzenle', function () {
+        var Id = $(this).data('id');
+        $('#dataModalLabel').html(Id + ' Nolu Duyuru Güncelleme İşlemi');
+        $.ajax({
+            url: '/Duyurular/DuyuruGetir/',
+            type: 'GET',
+            dataType: 'json',
+            data: { id: Id },
+            success: function (result) {
+                $('#dataModal').modal('show');
+                $('#ID').val(result.ID);
+                $('#txtBaslik').val(result.Baslik);
+                $('#txtDuyuru').val(result.Duyuru);
+                $('#txtAciklama').val(result.Aciklama);
+
+                var timestamp = parseInt(result.Tarih.replace("/Date(", "").replace(")/", ""));
+                var serverDate = new Date(timestamp);
+                var correctedDate = new Date(serverDate.getTime() - serverDate.getTimezoneOffset() * 60000);
+                var formattedDate = correctedDate.toISOString().slice(0, 16);
+
+                $('#txtTarih').val(formattedDate);
+
+
+            },
+            error: function () {
+                alert('Bir hata oluştu');
+            }
+        });
+    });
+</script>
+
+<script>
+    function Temizle() {
+
+        $('#data-form').trigger('reset');
+        $('#dataModalLabel').html('Duyuru Ekleme Sayfası');
+        $('#ID').val(0);
+
+
+    }
+</script>
+
+<script>
+    function Ekle() {
+        Temizle();
+    }
+</script>
+
+<script>
+    $(document).on('click', '.btnSil', function () {
+        var Id = $(this).data('id');
+        var btn = this;  // click yapılan elemanı sakla
+
+        $.ajax({
+            type: 'POST',
+            url: '/Duyurular/DuyuruGetir/',
+            data: { id: Id },
+            success: function (result) {
+
+                var timestamp = parseInt(result.Tarih.replace("/Date(", "").replace(")/", ""));
+                var serverDate = new Date(timestamp);
+                var correctedDate = new Date(serverDate.getTime() - serverDate.getTimezoneOffset() * 60000);
+                var formattedDate = correctedDate.toISOString().slice(0, 16);
+
+                Swal.fire({
+                    title: 'Kayıt Silme!',
+                    html:
+                        '<b>Id:</b> ' + result.ID +
+                        '<br/><b>Başlık:</b> ' + result.Baslik +
+                        '<br/><b>Duyuru:</b> ' + result.Duyuru +
+                        '<br/><b>Açıklama:</b> ' + result.Aciklama +
+                        '<br/><b>Tarih:</b> ' + formattedDate,
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Evet!',
+                    cancelButtonText: 'Hayır!'
+                }).then((swalResult) => {
+                    if (swalResult.isConfirmed) {
+
+                        var deleteId = $(btn).data('id');
+
+                        $.ajax({
+                            type: 'POST',
+                            url: '/Duyurular/DuyuruSil/',
+                            data: { id: deleteId },
+                            success: function () {
+                                Listele();
+                                Temizle();
+
+                                Swal.fire(
+                                    'Silindi!',
+                                    'Kayıt silme işlemi başarıyla gerçekleşti.',
+                                    'success'
+                                );
+                            },
+                            error: function () {
+                                alert('Bir hata oluştu');
+                            }
+                        });
+                    }
+                });
+            }
+        });
+    });
+</script>
+
+<script>
+    $(document).on('click', '#tdCheck', function () {
+
+        if ($(this).is(':checked')) {
+            $('.recordCheckBox').prop('checked', true);
+        } else {
+            $('.recordCheckBox').prop('checked', false);
+
+        }
+
+    });
+
+</script>
+
+<script>
+    $(document).on('click', '#silButton', function () {
+
+        var selectedIds = [];
+
+        $('.recordCheckBox:checked').each(function () {
+            selectedIds.push($(this).data('id'));
+        });
+
+        if (selectedIds.length > 0) {
+
+            Swal.fire({
+                title: 'Kayıt Silme!',
+                icon: 'warning',
+                html: 'Silinecek Kayıt No(lar): </br>' + selectedIds.join(', '),
+                showCancelButton: true,
+                confirmButtonColor: '#d33',
+                cancelButtonColor: '#3085d6',
+                confirmButtonText: 'Evet!',
+                cancelButtonText: 'Hayır!'
+            }).then((result) => {
+
+                if (result.isConfirmed) {
+
+                    $.ajax({
+                        type: "POST",
+                        url: "/Duyurular/SeciliDuyuruSil",
+                        data: { selectedIds: selectedIds },
+
+                        success: function () {
+
+                            $('.recordCheckBox:checked').closest('tr').remove();
+
+                            Swal.fire(
+                                'Silindi!',
+                                'Kayıt silme işlemi başarıyla gerçekleşti.',
+                                'success'
+                            );
+                        },
+
+                        error: function () {
+                            Swal.fire(
+                                'Hata!',
+                                'Silme işlemi başarısız oldu.',
+                                'error'
+                            );
+                        }
+                    });
+
+                }
+            });
+        }
+    });
+</script>
+
+
+<script>
+    // Modalın sağ üstündeki X (close) butonuna basılınca çalışır
+    $(document).on('click', '.close', function () {
+        $('#dataModal').modal('hide');
+    });
+</script>
+
+
+
+
+
+
+
+
