--- a/MVC_Kutuphane_Otomasyonu/Views/Kitaplar/Ekle.cshtml
+++ b/MVC_Kutuphane_Otomasyonu/Views/Kitaplar/Ekle.cshtml
@@ -12,7 +12,7 @@
 
         <div class="ibox">
             <div class="ibox-head">
-                <b>Kitap Türü Ekleme Sayfası</b>
+                <b>Kitap Ekleme Sayfası</b>
             </div>
             <div class="ibox-body">
                 @using (Html.BeginForm("Ekle", "Kitaplar", FormMethod.Post))
