--- a/MVC_Kutuphane_Otomasyonu/Views/Kullanicilar/Index.cshtml
+++ b/MVC_Kutuphane_Otomasyonu/Views/Kullanicilar/Index.cshtml
@@ -36,7 +36,7 @@
                                 <td>@item.KayitTarihi</td>  
                                 <td>
                                     @Html.ActionLink("Düzenle", "Duzenle", new { id = item.ID }, new { @class = "btn btn-primary btn-sm" }) |
-                                    @Html.ActionLink("Detay", "Detay", new { id = item.ID }, new { @class = "btn btn-info btn-sm" }) |
+                                    @*@Html.ActionLink("Detay", "Detay", new { id = item.ID }, new { @class = "btn btn-info btn-sm" }) |*@
                                     @Html.ActionLink("Sil", "Sil","Kullanicilar", new { id = item.ID }, new { @class = "btn btn-danger btn-sm", onclick = "return confirm('Bu kitabı silmek istediğinize emin misiniz?');" }) |
                                     @Html.ActionLink("Rolleri", "Krolleri", new { id = item.ID }, new { @class = "btn btn-primary btn-sm" })
                                 </td>
