--- a/MVC_Kutuphane_Otomasyonu/Views/Shared/_AdminLayout.cshtml
+++ b/MVC_Kutuphane_Otomasyonu/Views/Shared/_AdminLayout.cshtml
@@ -24,7 +24,10 @@
 
 
         }
-        rol = rol.Substring(0, rol.Length - 1);
+        if (!string.IsNullOrEmpty(rol))
+        {
+            rol = rol.Substring(0, rol.Length - 1);
+        }
 
     }
 }
@@ -210,10 +213,10 @@
                             @{ 
                                 var userName = User.Identity.Name;//kullanıcının email bilgisi
                                 var model = context.Kullanicilar.FirstOrDefault(x => x.Email == userName);
-                                int Id = model.ID;
+                                int ID = model.ID;
                             }
 
-                            <a class="dropdown-item" href="/Kullanicilar/Duzenle/@Id"><i class="fa fa-user"></i>Profil</a>
+                            <a class="dropdown-item" href="/Kullanicilar/Duzenle/@ID"><i class="fa fa-user"></i>Profil</a>
                             @*<a class="dropdown-item" href="profile.html"><i class="fa fa-cog"></i>Ayarlar</a>*@
                             @*<a class="dropdown-item" href="javascript:;"><i class="fa fa-support"></i>Support</a>
                                 <li class="dropdown-divider"></li>*@
